package SGG.Template;

public class PeanutSoyaMilk extends SoyaMilk{
    @Override
    protected void addCondiments() {
        System.out.println("加入花生");
    }
}
