package SGG.Template;

public class RedBeanSoyaMilk extends SoyaMilk{
    @Override
    protected void addCondiments() {
        System.out.println("加入上好的红豆");
    }
}
